@@ -4,6 +4,7 @@
 CREATE TABLE cc_static_territories (
 	uid int(11) unsigned NOT NULL auto_increment,
 	pid int(11) unsigned DEFAULT '0' NOT NULL,
+	deleted tinyint(4) DEFAULT '0' NOT NULL,
 	tr_iso_nr int(11) unsigned DEFAULT '0' NOT NULL,
 	tr_parent_territory_uid int(11) DEFAULT '0' NOT NULL,
 	tr_parent_iso_nr int(11) unsigned DEFAULT '0' NOT NULL,
@@ -37,53 +38,60 @@ CREATE TABLE cc_static_countries (
 	cn_zone_flag tinyint(4) DEFAULT '0' NOT NULL,
 	cn_short_local varchar(70) DEFAULT '' NOT NULL,
 	cn_short_en varchar(50) DEFAULT '' NOT NULL,
+	cn_country_zones int(11) DEFAULT '0' NOT NULL,
 	PRIMARY KEY (uid)
 );
 
 CREATE TABLE cc_static_country_zones (
-  uid int(11) unsigned NOT NULL auto_increment,
-  pid int(11) unsigned DEFAULT '0' NOT NULL,
-  zn_country_iso_2 char(2) DEFAULT '' NOT NULL,
-  zn_country_iso_3 char(3) DEFAULT '' NOT NULL,
-  zn_country_iso_nr int(11) unsigned DEFAULT '0' NOT NULL,
-  zn_code varchar(45) DEFAULT '' NOT NULL,
-  zn_name_local varchar(128) DEFAULT '' NOT NULL,
-  zn_name_en varchar(50) DEFAULT '' NOT NULL,
-  PRIMARY KEY (uid)
+	uid int(11) unsigned NOT NULL auto_increment,
+	pid int(11) unsigned DEFAULT '0' NOT NULL,
+	deleted tinyint(4) DEFAULT '0' NOT NULL,
+	zn_country_iso_2 char(2) DEFAULT '' NOT NULL,
+	zn_country_iso_3 char(3) DEFAULT '' NOT NULL,
+	zn_country_iso_nr int(11) unsigned DEFAULT '0' NOT NULL,
+	zn_code varchar(45) DEFAULT '' NOT NULL,
+	zn_name_local varchar(128) DEFAULT '' NOT NULL,
+	zn_name_en varchar(50) DEFAULT '' NOT NULL,
+	zn_country_uid int(11) DEFAULT '0' NOT NULL,
+	zn_country_table tinytext,
+	PRIMARY KEY (uid)
 );
 
 CREATE TABLE cc_static_currencies (
-  uid int(11) unsigned NOT NULL auto_increment,
-  pid int(11) unsigned DEFAULT '0' NOT NULL,
-  cu_iso_3 char(3) DEFAULT '' NOT NULL,
-  cu_iso_nr int(11) unsigned DEFAULT '0' NOT NULL,
-  cu_name_en varchar(50) DEFAULT '0' NOT NULL,
-  cu_symbol_left varchar(12) DEFAULT '' NOT NULL,
-  cu_symbol_right varchar(12) DEFAULT '' NOT NULL,
-  cu_thousands_point char(1) DEFAULT '.' NOT NULL,
-  cu_decimal_point char(1) DEFAULT ',' NOT NULL,
-  cu_decimal_digits tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  cu_sub_name_en varchar(20) DEFAULT '' NOT NULL,
-  cu_sub_divisor int(11) DEFAULT '0' NOT NULL,
-  cu_sub_symbol_left varchar(12) DEFAULT '' NOT NULL,
-  cu_sub_symbol_right varchar(12) DEFAULT '' NOT NULL,
-  PRIMARY KEY (uid)
+	uid int(11) unsigned NOT NULL auto_increment,
+	pid int(11) unsigned DEFAULT '0' NOT NULL,
+	deleted tinyint(4) DEFAULT '0' NOT NULL,
+	cu_iso_3 char(3) DEFAULT '' NOT NULL,
+	cu_iso_nr int(11) unsigned DEFAULT '0' NOT NULL,
+	cu_name_en varchar(50) DEFAULT '' NOT NULL,
+	cu_symbol_left varchar(12) DEFAULT '' NOT NULL,
+	cu_symbol_right varchar(12) DEFAULT '' NOT NULL,
+	cu_thousands_point char(1) DEFAULT '' NOT NULL,
+	cu_decimal_point char(1) DEFAULT '' NOT NULL,
+	cu_decimal_digits tinyint(3) unsigned DEFAULT '0' NOT NULL,
+	cu_sub_name_en varchar(20) DEFAULT '' NOT NULL,
+	cu_sub_divisor int(11) DEFAULT '1' NOT NULL,
+	cu_sub_symbol_left varchar(12) DEFAULT '' NOT NULL,
+	cu_sub_symbol_right varchar(12) DEFAULT '' NOT NULL,
+	PRIMARY KEY (uid),
+	KEY parent (pid)
 );
 
 #
 # Table structure for table "static_languages"
 #
 CREATE TABLE cc_static_languages (
-  uid int(11) unsigned NOT NULL auto_increment,
-  pid int(11) unsigned DEFAULT '0' NOT NULL,
-  lg_iso_2 char(2) DEFAULT '' NOT NULL,
-  lg_name_en varchar(50) DEFAULT '' NOT NULL,
-  lg_typo3 char(2) DEFAULT '' NOT NULL,
-  lg_country_iso_2 char(2) DEFAULT '' NOT NULL,
-  lg_collate_locale varchar(5) DEFAULT '' NOT NULL,
-  lg_name_local varchar(99) default '',
-  lg_sacred tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  lg_constructed tinyint(3) unsigned DEFAULT '0' NOT NULL,
-  PRIMARY KEY (uid),
-  KEY parent (pid)
+	uid int(11) unsigned NOT NULL auto_increment,
+	pid int(11) unsigned DEFAULT '0' NOT NULL,
+  	deleted tinyint(4) DEFAULT '0' NOT NULL,
+	lg_iso_2 char(2) DEFAULT '' NOT NULL,
+	lg_name_local varchar(99) DEFAULT '' NOT NULL,
+	lg_name_en varchar(50) DEFAULT '' NOT NULL,
+	lg_typo3 char(2) DEFAULT '' NOT NULL,
+	lg_country_iso_2 char(2) DEFAULT '' NOT NULL,
+	lg_collate_locale varchar(5) DEFAULT '' NOT NULL,
+	lg_sacred tinyint(3) unsigned DEFAULT '0' NOT NULL,
+	lg_constructed tinyint(3) unsigned DEFAULT '0' NOT NULL,
+	PRIMARY KEY (uid),
+	KEY parent (pid) 
 );
